tests/invalid/extend_primitive_types.ri
extend bool {
    func my_func(self) { _ = self; }
}

extend uint {
    func my_func(self) { _ = self; }
}
